apps/spire/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spire
  labels:
    app.kubernetes.io/name: spire
    app.kubernetes.io/part-of: machine-identity-platform
