apps/spire/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-server
  namespace: spire
  labels:
    app: spire-server
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: spire-server
